--- a/package.json
+++ b/package.json
@@ -1,48 +1,55 @@
 {
-  "name": "nextinator",
+  "name": "nextpilot",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "postinstall": "prisma generate",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.12",
-    "@clerk/themes": "^1.7.12",
-    "@hookform/resolvers": "^3.3.4",
-    "@pinecone-database/pinecone": "^2.2.0",
-    "@prisma/client": "^5.12.1",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@ai-sdk/anthropic": "^1.2.12",
+    "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/xai": "^1.2.16",
+    "@clerk/nextjs": "^6.21.0",
+    "@clerk/themes": "^2.2.49",
+    "@google/generative-ai": "^0.24.1",
+    "@hookform/resolvers": "^5.1.1",
+    "@langchain/core": "^0.3.57",
+    "@pinecone-database/pinecone": "^6.1.0",
+    "@prisma/client": "^6.9.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.3.0",
-    "ai": "^3.0.19",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.363.0",
-    "next": "14.1.4",
-    "next-themes": "^0.3.0",
-    "openai": "^4.33.0",
-    "prisma": "^5.12.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.2",
-    "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "@tsparticles/slim": "^3.8.1",
+    "ai": "^4.3.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.513.0",
+    "next": "15.3.3",
+    "next-themes": "^0.4.6",
+    "openai": "^5.2.0",
+    "pdfjs-dist": "^5.3.31",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
+    "react-icons": "^5.5.0",
+    "react-pdf": "^9.2.1",
+    "react-pdftotext": "^1.3.4",
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.57"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
