--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prisma": "^6.9.0"
   }
 }
