--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pinecone-database/pinecone": "^6.1.0",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "ai": "^4.3.16",
